# aula_09_bootcamp

./: README.md  etl.py  exemplo_log_loguru.py  log_com_func.py  pipeline.py  pyproject.toml  utils_log.py
